# IOHinspector

./: .gitignore  .prospector.yaml  FUNCTION_REFERENCE.md  LISCENSE  README.md  pymoo_wrapper.py  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
aux/: aggregated_result.csv  aligned_data.csv  ecdf_data.csv  selected_data.csv  try.ipynb
aux/test_data/algorithm_A/: IOHprofiler_f1_Sphere.json
aux/test_data/algorithm_B/: IOHprofiler_f1_Sphere.json
aux/test_data/algorithm_B-1/: IOHprofiler_f2_Ellipsoid.json
examples/: Examples.ipynb  MO_Examples.ipynb  SO_Examples.ipynb
examples/MO_Data/NSGA_10-1/: IOHprofiler_f1_pymoo_ZDT2.json
scripts/: pymoo_wrapper.py
src/iohinspector/: __init__.py  align.py  data.py  indicators.py  manager.py  metrics.py  old_metrics.py  plot.py
src/iohinspector/metrics/: eaf.py  (+10 more)
src/iohstats/: __init__.py  align.py  data.py  indicators.py  manager.py  metrics.py  plot.py
tests/: generate_test_data.py  test_align.py  test_data.py
tests/data_processing/: test_aggregate_convergence.py  test_aggregate_running_time.py  test_aocc.py  test_ecdf.py  test_normalise_objectives.py  test_utils.py
tests/test_metrics/: test_aocc.py  test_attractor_network.py  test_eaf.py  test_ecdf.py  test_fixed_budget.py  test_fixed_target.py  test_multi_objective.py  test_normalise_objectives.py  test_ranking.py  test_single_run.py  test_trajectory.py  test_utils.py
tests/test_plots/: test_attractor_network.py  test_eaf.py  test_ecdf.py  test_fixed_budget.py  test_fixed_target.py  test_multi_objective.py  test_ranking.py  test_single_run.py
(+196 files in other folders)
