[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iohinspector"
version = "0.0.1"
authors = [
  { name="Diederick Vermetten", email="d.vermetten@gmail.com" },
  { name="Jacob de Nobel", email="jacobdenobel@gmail.com" },
]
description = "Package for managing IOH data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "ioh",
  "matplotlib",
  "moocore",
  "numpy",
  "pandas",
  "pymoo", 
  "polars",
  "pyarrow", 
  "robustranking", 
  "seaborn",
  "skelo"
]

[project.urls]
Homepage = "https://github.com/IOHprofiler/iohinspector"
Issues = "https://github.com/IOHprofiler/iohinspector/issues"